@@ -134,7 +134,7 @@ other-sources/buzz-sources/__BUZZ1PLAYER__NOT_FOR_PUBLIC!/CMachine.cpp
 2009.01.29 : Of 533 machine(s) 451 worked, 9 did not processed data and 73 failed to load.
 2009.11.02 : Of 537 machine(s) 454 worked, 10 did not processed data and 73 failed to load
 2010.02.03 : Of 517 machine(s) 433 worked, 9 did not processed data and 75 failed to load
-2011.01.09 : Of 517 machine(s) 442 worked, 6 did not processed data and 69 failed to load.
+2011.01.09 : Of 517 machine(s) 443 worked, 6 did not processed data and 68 failed to load.
 
 == sterni ==
 2008.10.14 : Of 853 machine(s) 759 worked and 94 failed to load.
@@ -207,7 +207,7 @@ Dolby Prologic Echo
 
 Ynzn's Remote Compressor.dll
 Ynzn's Remote Gate.dll
-  both crash (problem with name?)
+  both crash (problem with name? - no we have others with "'")
 PSI Corp's LFO Filter.dll
 Repeater.dll
 RnZnAnFnCnR VST Effect Adapter.dll
