@@ -1,5 +1,11 @@
 2011-01-09  Stefan Kost  <ensonic@users.sf.net>
 
+	* TODO:
+	* dllwrapper/wine/win32.c:
+	  Also register MSVCRTD (debug variant). Fixes one more machine.
+
+2011-01-09  Stefan Kost  <ensonic@users.sf.net>
+
 	* tests/testmachine.sh:
 	  Fix link for sortable.js. Add more cmdline tricks for log analysis.
 
